[package]
name = "av3_front"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
yew = { version = "0.21.0", features = ["csr"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
web-sys = "0.3"
js-sys = "0.3"
gloo-utils = "0.2.0"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "av3_front"
path = "src/main.rs"
