[package]
name = "av3_front"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
mapboxgl = "0.4.1"
log = "0.4.6"
wasm-logger = "0.2.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
futures = "0.3"
web-sys = { version = "0.3", features = ["console"] }
geojson = "0.24"
serde_json = "1.0.118"
serde = { version = "1.0.203", features = ["derive"] }
reqwest = { version = "0.12.5", features = ["json"] }

[[bin]]
name = "av3_front"
path = "src/main.rs"
